Infra-Clinic/k8s-manifests/development/prontclinic-app/prontclinic-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prontclinic-app-service
  namespace: ptcc-development
  labels:
    app: prontclinic-app
    project: "ProntClinic"
    environment: "development"
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: prontclinic-app
